@@ -1,6 +1,8 @@
 New in SVN (will be 0.11)
 -------------------------
 
+* New tstyles section in the stylesheet provides more configurable list layouts 
+  and more powerful table styling.
 * Better syntax highlighting (supports bold/italic)
 * Workaround for issue 103 so you can use borderPadding as a list (but it will look wrong
   if you are using wordaxe <= 0.3.2) 
